# helixai

./: .env.example  AGENTS.md  README.md  TAURI.md  chat.ts  eslint.config.js  extract.ts  fix_app_transcript.cjs  fix_app_voice.cjs  fix_prompt.ts  fix_registry_params.ts  fix_server_imports.ts  index.html  metadata.json  package-lock.json  package.json  patch.cjs  patch_agentloop.cjs  patch_audio_capture.cjs  patch_chat_style.cjs  patch_lib.js  patch_lib3.cjs  patch_lib4.cjs  patch_lib5.cjs  patch_lm.cjs  patch_main.cjs  patch_server.cjs  patch_server_err.cjs  patch_server_model.cjs  patch_use_voice.cjs  patch_usevoice_vol.cjs  patch_vis_amp.cjs  patch_vis_wake.cjs  patch_voicemanager.cjs  patch_voicemanager_start.cjs  patch_voicemanager_vol.cjs  patch_voicemanager_ws.cjs  replace.js  rewrite_app.cjs  rewrite_server.cjs  (+30 more)
backend-dist/: onnxruntime_binding-4LK5T42I.node  onnxruntime_binding-I6FPYYOQ.node  onnxruntime_binding-L2PGCXTQ.node  onnxruntime_binding-NH5JCQKK.node  onnxruntime_binding-OTOMEMLG.node  onnxruntime_binding-ZTPWXQRS.node  server_bundle.cjs  server_bundle.cjs.map  sharp-linux-x64-DQNVFNDI.node
data/: evolution_api_metrics.json  evolution_knowledge.json  evolution_proposals.json  evolution_reports.json  evolution_self_analysis.json  learned_skills.json  learning_log.json
scripts/: clear_dummy.cjs  fix_app_css.cjs  fix_app_respond.cjs  fix_app_voiceengine_import.cjs  fix_usevoice.cjs  (+25 more)
src-tauri/: Cargo.toml  generate_placeholders.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+73 files in other folders)
